# riscalar_gui

./: README.md  pubspec.yaml
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  theme.dart
lib/features/functional_simulation/: page.dart
lib/features/latency_simulation/: page.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: simple.rs
rust/src/cpu/: csr.rs  exception.rs  instr.rs  memory.rs  mod.rs  register.rs  stats.rs
rust/src/cpu/functional_core/: execute.rs  mod.rs  stats.rs
rust/src/cpu/latency_core/: execute.rs  instr.rs  latency_args.rs  mod.rs  reservation_station.rs  stage1_fetch.rs  stage2_dispatch.rs  stage3_issue.rs  stage4_writeback.rs  stage5_commit.rs  stats.rs
rust/src/cpu/latency_core/components/: branch_predictor.rs  functional_unit_pool.rs  mod.rs  spec_mem.rs
rust/src/cpu/latency_core/components/cache/: hierarchy.rs  implementation.rs  mod.rs
rust_builder/android/: build.gradle
rust_builder/ios/: rust_builder.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_builder.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+33 files in other folders)
