[package]
name = "riscalar"
version = "0.1.0"
edition = "2021"
authors = ["Josiah Mendes"]

[lib]
crate-type = ["lib","cdylib", "staticlib"]

[[bin]]
name = "riscalar-lat"
path = "src/bin/latency_bin.rs"

[[bin]]
name = "riscalar-func"
path = "src/bin/functional_bin.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.1.8", features = ["derive"] }
flutter_rust_bridge = "=2.0.0-dev.22"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0"
rand = "0.8.5"

[profile.release]
debug = true
lto = true